sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:12: error: '(' expected but identifier found.
    if ecart>1 {
       ^AlgCombSort:19: error: ')' expected but 'if' found.
      if (!test){
      ^